--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "joi": "^17.13.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.5",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
