--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.11.5",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
